++++修改首页样式布局

--- a/PageDemo/index.html
+++ b/PageDemo/index.html
@@ -6,7 +6,7 @@
 <meta name="description" content="Helloweba演示平台，演示XHTML、CSS、jquery、PHP案例和示例" />
 <title>jQuery+Ajax+PHP+Mysql实现分页显示数据</title>
 <style type="text/css">
-#list{ height:530px; margin:50px auto 2px auto; position:relative;display:block;}
+#list{ height:530px; margin:2px auto 2px auto; position:relative;display:block;}
 #list ul li{ float:left;width:220px; height:260px; margin:2px; list-style:none;}
 #list ul li img{width:220px; height:220px}
 #list ul li p{line-height:22px}
@@ -91,10 +91,10 @@ $(function(){
 
 <body>
 <div id="header">
-   	<div id="logo"><h3><a href="#" title="首页">PHP分页</a></h3></div>
+	<div id="logo"><i><a href="#" title="首页">PHP无刷新分页</a></i></div>
 </div>
 <div id="main">
-  	<h3 class="top_title"><a href="http://www.helloweba.com/view-blog-195.html" target="_blank">jQuery+Ajax+PHP+Mysql实现分页显示数据</a></h3>
+  	<!--<h3 class="top_title"><a href="http://www.helloweba.com/view-blog-195.html" target="_blank">jQuery+Ajax+PHP+Mysql实现分页显示数据</a></h3>-->
    	<div id="list">
     	<ul></ul>
     </div>
